# lua-ray

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  main.lua  package.json  posteffect_worker.lua  raytracer.lua  server-cross-origin.py  triangles.lua  worker.lua
.agent/rules/: build.md
.agent/skills/: tdd.md
.agent/workflows/: build.md
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: coding_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: introduction.md
lib/: BilateralFilter.lua  BlockUtils.lua  Camera.lua  CameraUtils.lua  Material.lua  PathTracer.lua  Ray.lua  RayTracer.lua  ResolutionPresets.lua  Texture.lua  ThreadPresets.lua  Vec3.lua  camera.lua
patches/: lbuffer-fix-little-endian.patch  lbuffer-fix-lua-qs.patch  lua-single-float.patch
scenes/: color_pattern.lua  cornell_box.lua  gltf_box.lua  gltf_box_textured.lua  material_transfer.lua  materialed_sphere.lua  posteffect.lua  raytracing_weekend.lua  sphere.lua  test_lifecycle.lua  triangle.lua  wasd_camera.lua
src/: app.cpp  app.h  app_data.h  context.h  embree_wrapper.cpp  embree_wrapper.h  gltf_loader.cpp  gltf_loader.h  imgui_lua_binding.cpp  imgui_lua_binding.h  lua_binding.cpp  lua_binding.h  main.cpp  thread_worker.cpp  thread_worker.h
test/: app_data_test.cpp  bilateral_filter_test.cpp  block_utils_test.cpp  camera_test.cpp  camera_utils_test.cpp  embree_link_test.cpp  gltf_loader_test.cpp  imgui_test.cpp  lbuffer_test.cpp  lua_binding_test.cpp  lua_link_test.cpp  material_test.cpp  pathtracer_test.cpp  ray_test.cpp  ray_tracer_test.cpp  resolution_presets_test.cpp  sdl_keyboard_test.cpp  sdl_mouse_test.cpp  sol2_test.cpp  texture_test.cpp  thread_presets_test.cpp  thread_worker_test.cpp  vec3_test.cpp  worker_lifecycle_test.cpp  worker_utils_test.cpp
workers/: posteffect_worker.lua  ray_worker.lua  worker_utils.lua
